[package]
name = "engine-restful"
version = "0.1.0"
edition = "2021"

[lib]
name = "restful"
path = "src/lib.rs"
crate-type = ["dylib"]



[dependencies]

# 公共模块
engine-share = { path = "../../simx/share" }
# 用于序列化和反序列化数据
# serde 的派生宏
serde_derive = "1.0.207"
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# Web 框架
salvo = "0.74.0"
tracing = "0.1"
tracing-subscriber = "0.3"